--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
